# JiHuan

./: .gitignore  Cargo.toml  README.md  check_all.py  check_phase27.py
config/: README.md  archive.toml  dedup-heavy.toml  default.toml  large-files.toml  reliability.toml  small-files.toml  space.toml  speed.toml
crates/jihuan-bench/: Cargo.toml
crates/jihuan-bench/benches/: compression_bench.rs  dedup_bench.rs  stats_bench.rs  storage_bench.rs  stream_bench.rs
crates/jihuan-bench/src/: lib.rs
crates/jihuan-cli/: Cargo.toml
crates/jihuan-cli/src/: backup.rs  main.rs
crates/jihuan-client/: Cargo.toml
crates/jihuan-client/examples/: embedded_quickstart.rs
crates/jihuan-client/src/: embedded.rs  error.rs  http.rs  lib.rs  types.rs
crates/jihuan-client/tests/: contract.rs
crates/jihuan-core/: Cargo.toml
crates/jihuan-core/config_templates/: default.toml
crates/jihuan-core/src/: engine.rs  lib.rs
crates/jihuan-core/src/block/: format.rs  mod.rs  reader.rs  writer.rs
crates/jihuan-core/src/chunking/: mod.rs
crates/jihuan-core/src/compression/: mod.rs
crates/jihuan-core/src/config/: mod.rs
crates/jihuan-core/src/dedup/: mod.rs
crates/jihuan-core/src/error/: mod.rs
crates/jihuan-core/src/gc/: mod.rs
crates/jihuan-core/src/metadata/: mod.rs  store.rs  types.rs
crates/jihuan-core/src/metrics/: mod.rs
crates/jihuan-core/src/utils/: mod.rs
crates/jihuan-core/src/wal/: mod.rs
crates/jihuan-core/tests/: integration_engine.rs
crates/jihuan-server/: Cargo.toml  build.rs
crates/jihuan-server/proto/: jihuan.proto
crates/jihuan-server/src/: main.rs  tls.rs
crates/jihuan-server/src/grpc/: admin_service.rs  auth_interceptor.rs  file_service.rs  mod.rs
crates/jihuan-server/src/http/: admin.rs  audit.rs  auth.rs  files.rs  iam.rs  mod.rs  ui.rs
crates/jihuan-server/src/service/: mod.rs
crates/jihuan-server/ui/: package-lock.json  package.json  vite.config.ts
crates/jihuan-server/ui/src/: App.tsx  api.ts
crates/jihuan-server/ui/src/components/: Layout.tsx
crates/jihuan-server/ui/src/lib/: utils.ts
crates/jihuan-server/ui/src/pages/: Audit.tsx  Blocks.tsx  Dashboard.tsx  Files.tsx  GC.tsx  Keys.tsx  Login.tsx  Metrics.tsx  Settings.tsx  Users.tsx
docs/: follow-ups.md  operator-guide.md  小文件存储系统开发设计文档.md
scripts/: docker-build.sh  docker-compose.yml
tests/: Cargo.toml
tests/perf/: README.md  load_concurrent_dedup.py  load_large_file.py  load_mixed.py  load_range.py  load_small_files.py  smoke_e2e.py  smoke_run.ps1
tests/src/: lib.rs
