[workspace]
resolver = "2"
members = [
    "crates/jihuan-core",
    "crates/jihuan-server",
    "crates/jihuan-cli",
    "crates/jihuan-client",
    "crates/jihuan-bench",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["JiHuan Contributors"]
license = "MIT"
repository = "https://github.com/your-org/jihuan"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# error handling
thiserror = "2"
anyhow = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "2.0.1"

# logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# hashing
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
hex = "0.4"
crc32fast = "1"

# compression
lz4_flex = "0.11"
zstd = "0.13"

# storage
redb = "2"

# concurrency
parking_lot = "0.12"
dashmap = "6"
lru = "0.12"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1", features = ["full"] }

# gRPC
tonic = { version = "0.12", features = ["transport", "codegen"] }
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# static file embedding
include_dir = "0.7"

# utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
num_cpus = "1"
tempfile = "3"
walkdir = "2"

# testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"          # faster than "fat" while still cross-crate inline
codegen-units = 1     # maximise optimisation quality
panic = "abort"       # smaller binary, no unwinding overhead
strip = "debuginfo"   # remove debug symbols but keep symbol names for crash reports

[profile.release-full-lto]
inherits = "release"
lto = true            # full LTO for absolute maximum performance (slow to build)
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = 1             # minimal debug info sufficient for perf/flamegraph

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
strip = false
