[package]
name = "jihuan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "jihuan"
path = "src/main.rs"

[dependencies]
# Used only for validate-config (reads TOML without opening the engine)
jihuan-core = { path = "../jihuan-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
# Phase 4.6 — export/import archive backends (tar + gzip)
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
